--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,12 +50,16 @@
     <string name="location_copied_coordinates_latitude_success">Latitude copied</string>
     <string name="location_copied_coordinates_longitude_success">Longitude copied</string>
     <string name="location_copy_coordinates_both">Latitude and longitude</string>
-    <string name="location_copy_coordinates_content_description">copy coordinates</string>
+    <string name="location_copy_coordinates_content_description">Copy coordinates</string>
     <string name="location_copy_coordinates_latitude">Latitude only</string>
     <string name="location_copy_coordinates_longitude">Longitude only</string>
     <string name="location_copy_coordinates_title">Which coordinates would you like to copy?</string>
+    <string name="location_copy_coordinates_tooltip">Copy coordinates</string>
     <string name="location_elevation_imperial">%s ft</string>
     <string name="location_elevation_metric">%s m</string>
+    <string name="location_help_button_content_description">Help</string>
+    <string name="location_help_button_tooltip">Help</string>
+    <string name="location_help_toolbar_title">Location Help</string>
     <string name="location_label_accuracy">Accuracy</string>
     <string name="location_label_bearing">Bearing</string>
     <string name="location_label_elevation">Elevation</string>
@@ -64,7 +68,12 @@
     <string name="location_permission_explanation_message">Positional needs your permission to access this device\'s location, but you previously denied it. You will need to grant it through the Settings app before using this app.</string>
     <string name="location_permission_explanation_positive">Go to Settings</string>
     <string name="location_permission_explanation_negative">@string/common_exit</string>
-    <string name="location_share_button_content_description">share coordinates</string>
+    <string name="location_screen_lock_button_content_description_off">Lock screen (currently off)</string>
+    <string name="location_screen_lock_button_content_description_on">Lock screen (currently on)</string>
+    <string name="location_screen_lock_button_tooltip_off">Lock screen (currently off)</string>
+    <string name="location_screen_lock_button_tooltip_on">Lock screen (currently on)</string>
+    <string name="location_share_button_content_description">Share coordinates</string>
+    <string name="location_share_button_tooltip">Share coordinates</string>
     <string name="location_share_snackbar_failure">Hold tight, still trying to get your coordinates…</string>
     <string name="location_snackbar_screen_locked">Screen locked on while app is visible</string>
     <string name="location_snackbar_screen_unlocked">Screen unlocked</string>
