--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="location_share_button_content_description">Share coordinates</string>
     <string name="location_share_button_tooltip">Share coordinates</string>
     <string name="location_share_snackbar_failure">Hold tight, still trying to get your coordinates…</string>
-    <string name="location_snackbar_screen_locked">Screen locked on while app is visible</string>
+    <string name="location_snackbar_screen_locked">Screen locked on while showing coordinates</string>
     <string name="location_snackbar_screen_unlocked">Screen unlocked</string>
     <string name="location_speed_imperial">%s mph</string>
     <string name="location_speed_metric">%s km/h</string>
