Start repackaging code for testability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="location_accuracy">± %s</string>
     <string name="location_accuracy_imperial">%s ft</string>
     <string name="location_accuracy_metric">%s m</string>
+    <string name="location_altitude_imperial">%s ft</string>
+    <string name="location_altitude_metric">%s m</string>
     <string name="location_bearing">%d°</string>
     <string name="location_coordinate_decimal">%.5f</string>
     <string name="location_coordinate_utm">%7.0f</string>
@@ -52,14 +54,12 @@
     <string name="location_coordinates_copy_longitude">Longitude only</string>
     <string name="location_coordinates_copy_title">Which coordinates would you like to copy?</string>
     <string name="location_coordinates_copy_tooltip">Copy coordinates</string>
-    <string name="location_elevation_imperial">%s ft</string>
-    <string name="location_elevation_metric">%s m</string>
     <string name="location_help_button_content_description">Help</string>
     <string name="location_help_button_tooltip">Help</string>
     <string name="location_help_toolbar_title">Location Help</string>
     <string name="location_label_accuracy">Accuracy</string>
     <string name="location_label_bearing">Bearing</string>
-    <string name="location_label_elevation">Elevation</string>
+    <string name="location_label_altitude">Altitude</string>
     <string name="location_label_speed">Speed</string>
     <string name="location_permission_required_button_ok" translatable="false">@string/common_ok</string>
     <string name="location_permission_required_button_privacy_policy">Here is our simple privacy policy.</string>
