--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,40 +136,13 @@
     <string name="settings_units_value_metric_name">Metric</string>
 
     <!-- Twilight -->
-    <string name="twilight_label">Daily Twilight Times</string>
-    <string name="twilight_body_evening_astronomical">Astronomical dusk</string>
-    <string name="twilight_body_evening_civil">Civil dusk</string>
-    <string name="twilight_body_evening_nautical">Nautical dusk</string>
-    <string name="twilight_body_evening_horizon">Sunset</string>
-    <string name="twilight_body_morning_astronomical">Astronomical dawn</string>
-    <string name="twilight_body_morning_civil">Civil dawn</string>
-    <string name="twilight_body_morning_nautical">Nautical dawn</string>
-    <string name="twilight_body_morning_horizon">Sunrise</string>
-    <string name="twilight_body_none">None</string>
-    <string name="twilight_body_updated_date_time">Updated at %s</string>
-    <string name="twilight_title_evening">Dusk</string>
-    <string name="twilight_title_morning">Dawn</string>
-    <string name="twilight_astronomical_content_description_dawn">Astronomical dawn</string>
-    <string name="twilight_astronomical_content_description_dusk">Astronomical dusk</string>
-    <string name="twilight_astronomical_label">Astronomical</string>
-    <string name="twilight_astronomical_tooltip_dawn">Astronomical dawn is when the sun has risen to 18° below the horizon.</string>
-    <string name="twilight_astronomical_tooltip_dusk">Astronomical dusk is when the sun has set to 18° below the horizon.</string>
-    <string name="twilight_civil_content_description_dawn">Civil dawn</string>
-    <string name="twilight_civil_content_description_dusk">Civil dusk</string>
-    <string name="twilight_civil_label">Civil</string>
-    <string name="twilight_civil_tooltip_dawn">Civil dawn is when the sun has risen to 6° below the horizon.</string>
-    <string name="twilight_civil_tooltip_dusk">Civil dusk is when the sun has set to 6° below the horizon.</string>
-    <string name="twilight_dawn_label">Dawn</string>
-    <string name="twilight_dusk_label">Dusk</string>
-    <string name="twilight_nautical_content_description_dawn">Nautical dawn</string>
-    <string name="twilight_nautical_content_description_dusk">Nautical dusk</string>
-    <string name="twilight_nautical_label">Nautical</string>
-    <string name="twilight_nautical_tooltip_dawn">Nautical dawn is when the sun has risen to 12° below the horizon.</string>
-    <string name="twilight_nautical_tooltip_dusk">Nautical dusk is when the sun has set to 12° below the horizon.</string>
-    <string name="twilight_sunrise_label">Sunrise</string>
-    <string name="twilight_sunrise_tooltip">Sunrise is when the sun has risen above the horizon.</string>
-    <string name="twilight_sunset_label">Sunset</string>
-    <string name="twilight_sunset_tooltip">Sunset is when the sun has set below the horizon.</string>
-    <string name="twilight_date_unknown">@string/common_dash</string>
-    <string name="twilight_time_unknown">@string/common_dash</string>
+    <string name="twilight_button_next_day_content_description">Next day</string>
+    <string name="twilight_button_previous_day_content_description">Previous day</string>
+    <string name="twilight_button_today">Jump to today</string>
+    <string name="twilight_label_astronomical">Astronomical</string>
+    <string name="twilight_label_civil">Civil</string>
+    <string name="twilight_label_nautical">Nautical</string>
+    <string name="twilight_label_sunrise">Sunrise</string>
+    <string name="twilight_label_sunset">Sunset</string>
+    <string name="twilight_time_none">@string/common_dash</string>
 </resources>
