Arrange views on bottom and clean up toolbar scrolling behavior

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,8 @@
     <string name="compass_mode_value_magnetic_north">Magnetic North</string>
     <string name="compass_mode_value_true_north">True North</string>
     <string name="compass_missing_hardware_body">The compass has been disabled.</string>
-    <string name="compass_missing_hardware_body_details">Most compass apps, like Positional, use a magnetometer that detects Earth\'s magnetic field just like a real compass uses a magnetic needle. We also use an accelerometer to determine how the device is oriented in the magnetic field (e.g. right side up or upside down). Unfortunately, your device is missing at least one of those sensors.</string>
+    <string name="compass_missing_hardware_dialog_confirm" translatable="false">@string/common_ok</string>
+    <string name="compass_missing_hardware_dialog_text">Most compass apps, like Positional, use a magnetometer that detects Earth\'s magnetic field just like a real compass uses a magnetic needle. We also use an accelerometer to determine how the device is oriented in the magnetic field (e.g. right side up or upside down). Unfortunately, your device is missing at least one of those sensors.</string>
     <string name="compass_missing_hardware_button_why">Why?</string>
     <string name="compass_missing_hardware_title">Missing Hardware</string>
 
@@ -129,6 +130,8 @@
     <string name="settings_theme_value_dark_name">Dark</string>
     <string name="settings_theme_value_device_name">Device</string>
     <string name="settings_theme_value_light_name">Light</string>
+
+    <string name="settings_title">Settings</string>
 
     <string name="settings_units_dialog_title">Units of measurement</string>
     <string name="settings_units_title">Units of measurement</string>
